# duck

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  app_event_test  compile_commands.json
include/: app.hpp  app_event.hpp  app_state.hpp  colorscheme.h  colorscheme.hpp  content_provider.h  content_provider.hpp  contentprovider.h  duck.h  duck.hpp  duck_event.h  event_bus.hpp  file_manager.h  file_manager.hpp  filemanager.h  input_handler.h  input_handler.hpp  inputhandler.h  layoutbuilder.h  scheduler.h  scheduler.hpp  task_lancher.hpp  ui.h  ui.hpp  utils.hpp
module/: duck.colorscheme.cppm  duck.contentprovider.cppm  duck.core.cppm  duck.filemanager.cppm  duck.inputhandler.cppm  duck.scheduler.cppm  duck.ui.cppm
src/: app.cpp  app_state.cpp  colorscheme.cpp  content_provider.cpp  contentprovider.cpp  duck.colorscheme.cpp  duck.contentprovider.cpp  duck.core.cpp  duck.cpp  duck.filemanager.cpp  duck.h  duck.inputhandler.cpp  duck.scheduler.cpp  duck.ui.cpp  event_bus.cpp  file_manager.cpp  file_manager.h  filemanager.cpp  filemanager.h  fs_utils.cpp  fs_utils.h  input_handler.cpp  input_handler.h  inputhandler.cpp  inputhandler.h  layoutbuilder.cpp  main.cpp  scheduler.cpp  ui.cpp  ui.h
tests/: file_manager_test.cpp  utils_test.cpp
